# augmented-mcqa

./: .env.example  .gitignore  README.md  context.txt  dataset_analysis.txt  instructions.txt  main.py  mmlu_analysis.txt  pyproject.toml  pytest.ini  requirements.txt  supergpqa_analysis.txt  supergpqa_counts.txt
analysis/: __init__.py  analyzer.py  benchmarker_analysis.py  branching_analysis.py  category_analysis.py  difficulty_visualize.py  visualize.py
config/: __init__.py  model_aliases.toml  settings.py
data/: __init__.py  adapter.py  arc_processor.py  augmentor.py  benchmarker_export.py  downloader.py  filter.py  final5_store.py  gpqa_processor.py  hub_utils.py  mmlu_pro_processor.py  pipeline.py  pushtohub.py  sorter.py  supergpqa_processor.py
docs/: architecture.md  cli-reference.md  evaluation.md  models.md  pipeline.md  sharding_and_recombination.md
evaluation/: __init__.py  evaluator.py  saver.py
experiments/: __init__.py  config.py  defaults.py  difficulty.py  matrix.py  runner.py
jobs/: README_local_eval.md  aug.sh  aug_claude.sh  aug_gemini.sh  aug_gpt41.sh  aug_gpt52.sh  clip_local_eval_master.sh  eval_matrix_array.sbatch  evaluate_array.sbatch  generate_array.sbatch  install_local_model_weights.sh  local_model_eval.sbatch  run_all_experiments.sh  run_evaluate_shard.sh  run_generate_shard.sh  run_local_eval.sh  srun_all_local_models_smoke.sh  srun_local_model_smoke.sh  submit_eval_array.sh  submit_evaluate_scheduler.sh  submit_generate_scheduler.sh
jobs/local_eval_env/: pyproject.toml
models/: __init__.py  anthropic_client.py  base.py  (+6 more)
(+2362 files in other folders)
