[project]
name = "augmented-mcqa-local-eval-env"
version = "0.1.0"
description = "Dedicated locked runtime for local-model SLURM eval runs"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=0.36.2,<1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6,<2.3",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "transformers>=4.57.6,<5",
    "vllm==0.11.2",
]
